--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "my-little-library-ionic",
-  "version": "1.0.0",
-  "description": "cliente side of my-little-library",
-  "main": "index.js",
+  "name": "my-little-library",
+  "version": "1.1.1",
+  "description": "my-little-library: An Ionic project",
   "dependencies": {
-    "gulp-cli": "^1.2.2"
+    "gulp": "^3.5.6",
+    "gulp-sass": "^2.0.4",
+    "gulp-concat": "^2.2.0",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-rename": "^1.2.0"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "bower": "^1.3.3",
+    "gulp-util": "^2.2.14",
+    "shelljs": "^0.3.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/igormicael/my-little-library-ionic.git"
-  },
-  "author": "igor micael",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/igormicael/my-little-library-ionic/issues"
-  },
-  "homepage": "https://github.com/igormicael/my-little-library-ionic#readme"
+  "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-console",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "cordova-plugin-statusbar",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": []
 }
